// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textOverflowMode renders 0 1`] = `
Array [
  .c0 {
  text-overflow-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders function 1`] = `
Array [
  .c0 {
  text-overflow-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders invalid theme path 1`] = `
Array [
  .c0 {
  text-overflow-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders negative number 1`] = `
Array [
  .c0 {
  text-overflow-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-overflow-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-overflow-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-overflow-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-overflow-mode: July;
}

@media May {
  .c0 {
    text-overflow-mode: August;
  }
}

@media April {
  .c0 {
    text-overflow-mode: September;
  }
}

@media January {
  .c0 {
    text-overflow-mode: November;
  }
}

@media April {
  .c0 {
    text-overflow-mode: August;
  }
}

@media June {
  .c0 {
    text-overflow-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: July;
}

@media May {
  .c0 {
    text-overflow-mode: August;
  }
}

@media April {
  .c0 {
    text-overflow-mode: September;
  }
}

@media January {
  .c0 {
    text-overflow-mode: November;
  }
}

@media April {
  .c0 {
    text-overflow-mode: August;
  }
}

@media June {
  .c0 {
    text-overflow-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overflow-mode: November;
  }
}

@media April {
  .c0 {
    text-overflow-mode: January;
  }
}

@media January {
  .c0 {
    text-overflow-mode: December;
  }
}

@media April {
  .c0 {
    text-overflow-mode: April;
  }
}

@media June {
  .c0 {
    text-overflow-mode: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overflow-mode: November;
  }
}

@media April {
  .c0 {
    text-overflow-mode: January;
  }
}

@media January {
  .c0 {
    text-overflow-mode: December;
  }
}

@media April {
  .c0 {
    text-overflow-mode: April;
  }
}

@media June {
  .c0 {
    text-overflow-mode: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-overflow-mode: July;
  }
}

@media April {
  .c0 {
    text-overflow-mode: August;
  }
}

@media January {
  .c0 {
    text-overflow-mode: September;
  }
}

@media April {
  .c0 {
    text-overflow-mode: November;
  }
}

@media June {
  .c0 {
    text-overflow-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-overflow-mode: July;
  }
}

@media April {
  .c0 {
    text-overflow-mode: August;
  }
}

@media January {
  .c0 {
    text-overflow-mode: September;
  }
}

@media April {
  .c0 {
    text-overflow-mode: November;
  }
}

@media June {
  .c0 {
    text-overflow-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overflow-mode: January;
  }
}

@media April {
  .c0 {
    text-overflow-mode: December;
  }
}

@media January {
  .c0 {
    text-overflow-mode: April;
  }
}

@media April {
  .c0 {
    text-overflow-mode: May;
  }
}

@media June {
  .c0 {
    text-overflow-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-overflow-mode: January;
  }
}

@media April {
  .c0 {
    text-overflow-mode: December;
  }
}

@media January {
  .c0 {
    text-overflow-mode: April;
  }
}

@media April {
  .c0 {
    text-overflow-mode: May;
  }
}

@media June {
  .c0 {
    text-overflow-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders postitive number 1`] = `
Array [
  .c0 {
  text-overflow-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders string 1`] = `
Array [
  .c0 {
  text-overflow-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textOverflowMode renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textOverflowMode renders valid theme path 1`] = `
Array [
  .c0 {
  text-overflow-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-overflow-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
